@@ -52,7 +52,8 @@ CVS			+ Added the ability to serve and manage text ads  (Niels, 2002-07-29)
                           - 2002-11-10:  Added option to turn off logging of the visitors hostname  (Niels)
                           - 2002-11-10:  Added option to log the IP address only, even if the hostname is available  (Niels)
                           - 2002-11-10:  Moved Geotargeting and Remote host settings to a seperate page  (Niels)
-                          - 2002-11-15:  Fixed/Changed generated bannercode source preview [the URL will now be shown the right way with a '&' not '&amp;'] (Stefan)
+			  - 2002-11-22:  Added support for direct selection delivery cache, which was previously only available for zones  (Niels)
+                          - 2002-11-22:  Added support for using a campaingid in the context parameter to prevent the same campaign being shown multiple times on the same page  (Niels)
 
 			+ Misc bugfixes
 			  - 2002-07-25:  On some systems history pages showed '-0' instead of simply '-' (Matteo)
